--- a/05_accessibleFormUI/styles.css
+++ b/05_accessibleFormUI/styles.css
@@ -5,17 +5,26 @@
     height: 100vh;
     background-color: lightgray;
     gap: 1em;
+
 } 
 
 .component{
     display: flex;
     flex-direction: column;
     background-color: white;
+    border: 6px solid #000;
     border-radius: 20px;
-    box-shadow: 0 5px 15px rgb(0, 0, 0, 0.1);
+    box-shadow: 0 5px 15px rgb(0, 0, 0, 0.5);
     gap: 1em;
     text-align: center;
     padding: 1em;
+    font-family: "Poppins", sans-serif;
+    
+    
+}
+
+h1{
+    text-decoration: underline;
 }
 
 form{
@@ -69,6 +78,7 @@ label{
     border-right: 1px solid darkgray;
 
 }
+
 .email-label{
     transform: translateY(-5px);
 }
@@ -114,6 +124,7 @@ label{
     color: black;
     background-color: lightgray;
     padding:0.8em 0.5em;
+    border: 3px solid #000;
     border-radius: 15px;
     font-size: 16px;
 }
